# openpod

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFERENCES.md  deny.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
bindings/node/: README.md
bindings/python/: README.md
crates/pod-agent-core/: Cargo.toml
crates/pod-agent-core/src/: connection.rs  endpoint.rs  error.rs  lib.rs  session.rs  stream_io.rs
crates/pod-agent-core/tests/: connection_test.rs  sas_live_test.rs  session_test.rs  stream_io_test.rs
crates/pod-client-core/: Cargo.toml
crates/pod-client-core/src/: connection.rs  endpoint.rs  error.rs  lib.rs  session.rs  stream_io.rs
crates/pod-proto/: Cargo.toml  build.rs
crates/pod-proto/src/: codec.rs  datagram.rs  error.rs  lib.rs  sas.rs  trust.rs  version.rs  wire.rs
crates/pod-proto/src/identity/: certificate.rs  keypair.rs  mod.rs  pod_id.rs
crates/pod-proto/src/tls/: cert_extract.rs  config.rs  mod.rs  verifier.rs
crates/pod-proto/tests/: identity_chain.rs  pairing_simulation.rs  wire_roundtrip.rs
docs/: Implementation Examples.md  Manifesto-v0.5.0.md  Manifesto-v0.7.1.md  Manifesto-v0.8.1.md
docs/archive/: Manifesto-v0.5.0.md  Manifesto-v0.6.0.md  Manifesto-v0.7.0.md  Manifesto-v0.8.0.md
proto/: pod_protocol.proto
