[workspace]
resolver = "2"
members = [
    "crates/pod-proto",
    "crates/pod-client-core",
    "crates/pod-agent-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/styin/openpod"

[workspace.dependencies]
pod-proto = { path = "crates/pod-proto" }
pod-client-core = { path = "crates/pod-client-core" }
pod-agent-core = { path = "crates/pod-agent-core" }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
sha2 = "0.10"
hmac = "0.12"
data-encoding = "2"
rcgen = { version = "0.13", features = ["pem"] }
rustls-pki-types = "1"
time = "0.3"
rand = "0.8"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
x509-parser = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1"
