[package]
name = "pod-client-core"
description = "OpenPod client transport: QUIC client, mDNS discovery, session management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pod-proto = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rustls-pki-types = { workspace = true }
