[package]
name = "pod-proto"
description = "OpenPod wire protocol: protobuf definitions, TOON codec, mTLS primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = "0.13"
